<resources>
    <string name="app_name">Economizze</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="receitas">Receitas</string>
    <string name="despesas">Despesas</string>
    <string name="financas_mes">Finanças do Mês</string>
    <string name="office">Office</string>
    <string name="relatorios">Relatórios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="principal">Principal</string>
    <string name="adicionar_despesa">Adicionar Despesa</string>
    <string name="alterar_despesa">Alterar Despesa</string>
    <string name="adicionar_receita">Adicionar Receita</string>
    <string name="alterar_receita">Alterar Receita</string>
    <string name="visao_geral">Visão Geral</string>
</resources>
